Mon Jul 16 23:07:51 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/base64.rb (Base64::b64encode): should not specify /o option
	  for regular expression.  [ruby-dev:31221]

Mon Jul 16 18:29:33 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_rindex_m): accept string-like object convertible
	  with #to_str method, as well as rb_str_index_m.  [ruby-core:11692]

Mon Jul 16 07:17:28 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (getspecial): lfp_svar_get() requires int for special
	  global variables.

Mon Jul 16 05:45:53 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): more checks for format argument.
	  [ruby-core:11569], [ruby-core:11570], [ruby-core:11571],
	  [ruby-core:11573]

Mon Jul 16 00:26:10 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_pow): removed invariant variable.  [ruby-dev:31236]

Sun Jul 15 22:24:37 2007  pegacorn  <subscriber.jp AT gmail.com>

	* ext/dl/cfunc.c (rb_dlcfunc_call): adjust format.  [ruby-dev:31222]

	* ext/digest/digest.c (rb_digest_instance_update,
	  rb_digest_instance_finish, rb_digest_instance_reset,
	  rb_digest_instance_block_length): %s in rb_raise() expects char*.
	  [ruby-dev:31222]

	* ext/openssl/ossl.h: include ossl_pkcs5.h.  [ruby-dev:31231]

	* ext/openssl/ossl_pkcs5.h: new file for PKCS5.  [ruby-dev:31231]

	* ext/openssl/ossl_x509name.c (ossl_x509name_to_s): use ossl_raise()
	  instead of rb_raise().  [ruby-dev:31222]

	* ext/sdbm/_sdbm.c: DOSISH platforms need io.h.  [ruby-dev:31232]

	* ext/syck/syck.h: include stdlib.h for malloc() and free().
	  [ruby-dev:31232]

	* ext/syck/syck.h (syck_parser_set_input_type): prototype added.
	  [ruby-dev:31231]

	* win32/win32.c: include mbstring.h for _mbspbrk().  [ruby-dev:31232]

	* include/ruby/win32.h (rb_w32_getcwd): prototype added.
	  [ruby-dev:31232]

Sun Jul 15 21:07:43 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (bigtrunc): do not empty Bignum.  [ruby-dev:31229]
